<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vishv.a1101015270.CuisineTypeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="31dp"
        android:text="@string/select_the_type_of_cuisine"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/cuisineType_rg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/american_rb"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/american"
            android:textColor="@android:color/holo_blue_dark" />

        <RadioButton
            android:id="@+id/italian_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/italian"
            android:textColor="@android:color/holo_blue_dark" />

        <RadioButton
            android:id="@+id/chinese_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/chinese"
            android:textColor="@android:color/holo_blue_dark" />

        <RadioButton
            android:id="@+id/indian_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/indian"
            android:textColor="@android:color/holo_blue_dark" />

        <RadioButton
            android:id="@+id/international_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/international"
            android:textColor="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/cuisineNext_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/next"
            android:textColor="@color/colorPrimaryDark" />

    </RadioGroup>


</RelativeLayout>
